# slamware_rviz_plugins

./: CMakeLists.txt  package.xml  plugin_description.xml
src/rviz/: setpose_tool.cpp  setpose_tool.h
