<?xml version="1.0"?>
<package format="2">
  <name>slamware_rviz_plugins</name>
  <version>0.0.0</version>
  <description>The slamware_rviz_plugins package</description>

  <maintainer email="k.hiroyuki.perc@gmail.com">harry3doz</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <exec_depend>pluginlib</exec_depend>
  <depend>rviz</depend>
  <depend>slamware_ros_sdk</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <rviz plugin="${prefix}/plugin_description.xml" />

  </export>
</package>
